Updated version - still not done

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Game of life</h1>
+    <h1>The Grand Game of life</h1>
+
+    <button id="abortButton" class="abortButton">Abort</button>
+    <button id="reviveButton" class="reviveButton">Revive</button>
 
     <div id="boardContainer"></div>
 
-    <script src="script.js"></script>
+    <script type="module" src="controller.js"></script>
   </body>
 </html>
