--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>The Game of Life</h1>
     <button id="startButton">Start</button>
     <button id="toggleButton">Pause/Fortsæt</button>
+    <button id="killButton">Restart</button>
     <div id="boardContainer"></div>
     <script type="module" src="controller.js"></script>
   </body>
